# Clide

./: .gitignore  Cargo.toml  GEMINI.md  LICENSE  README.md  README.zh-TW.md  README.zh.md  msedit  package-lock.json
.gemini/: GEMINI.md
.github/workflows/: build.yml
config/: agents.example.toml  layout.json  log4rs.yaml
python/: agent_stub.py
python/plugins/: example_plugin.json
src/: app.rs  definitions.rs  editor.rs  event.rs  file_tree.rs  git.rs  i18n.rs  lsp.rs  main.rs  plugin.rs  syntax.rs  terminal.rs  tui.rs  ui.rs
src/agent/: config.rs  manager.rs  message.rs  mod.rs  session.rs
src/agent/providers/: local_process.rs  mcp.rs  mod.rs
src/agent/providers/http/: mod.rs  models.rs
src/app/: actions.rs  agent.rs  files.rs  init.rs  keyboard.rs  layout.rs  menu.rs  mod.rs  mouse.rs  overlays.rs  preferences.rs  state.rs  tick.rs
src/components/: header.rs  mod.rs  popup.rs  status_bar.rs
src/components/editor/: mod.rs  view.rs
src/components/file_tree/: mod.rs  view.rs
src/core/: i18n.rs  lsp.rs  mod.rs  syntax.rs
src/features/: git.rs  git_view.rs  mod.rs  plugin.rs  terminal.rs  terminal_view.rs
src/panels/: agent.rs  terminal.rs
src/ui/: editor.rs  file_tree.rs  git.rs  layout.rs  mod.rs  terminal.rs  theme.rs
