[package]
name = "clide"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
crossterm = "0.27"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
ropey = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
walkdir = "2.5"
unicode-width = "0.1"
