[package]
name = "Clide"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
crossterm = "0.29.0"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
lsp-types = "0.97.0"
ratatui = "0.29.0"
serde = "1.0.225"
serde_json = "1.0.145"
syntect = "5.2.0"
tokio = { version = "1.47.1", features = ["full"] }
